# Rust-Training-Course

./: Cargo.toml  Makefile
src/tasks/: c1_common_concepts.rs  c3_ownership_and_memory.rs  c4_structs_methods_enums_pattern_matching.rs  c5_collections.rs  c6_error_handling_tests_docs.rs  mod.rs
src/tests/: mod.rs
